@@ -1,1 +1,2 @@
 POLICY_PROFILE = u"intranett.policy:default"
+THEME_PROFILE = u"intranett.theme:default"
