@@ -59,9 +59,9 @@ class FunctionalUpgradeTestCase(Sandboxed, IntranettTestCase,
 
         result = mig.upgrade(swallow_errors=False)
 
-        # Run the upgrades for policy and theme
-        run_upgrade(oldsite.portal_setup)
+        # Run the upgrades for theme and policy
         run_upgrade(oldsite.portal_setup, u"intranett.theme:default")
+        run_upgrade(oldsite.portal_setup)
 
         return (oldsite, result)
 
