@@ -4,6 +4,11 @@ Changelog
 0.8 - unreleased
 ----------------
 
+- Added command line script to upgrade an existing site and recook all
+  resources. Call it via ``bin/instance run
+  <path to policy egg>/intranett/policy/commands.py upgrade``. In Zope 2.13+
+  we can re-factor this as a script exposed via `setup.py` like `bin/upgrade`.
+  [hannosch]
 
 0.7 - 2010-11-24
 ----------------
